--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,9 +1,21 @@
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5432/mynewdb
-    username: myuser
-    password: mypassword
-    driver-class-name: org.postgresql.Driver
+    url: jdbc:h2:mem:book-db
+    username: root
+    password:
+    driver-class-name: org.h2.Driver
+  h2:
+    console:
+      enabled: true
+      path: /h2-console
+      setting:
+        trace: true
+        web-allow-others: false
   jpa:
+    database-platform: org.hibernate.dialect.H2Dialect
     hibernate:
       ddl-auto: update
+    show-sql: true
+    properties:
+      hibernate:
+        format_sql: true
